# xdp-natd

./: .dockerignore  Cargo.toml  Dockerfile  README.md
bruno-endpoints/: health_check.yml  opencollection.yml  unexpose.yml
configuration/: base.yaml  local.yaml  production.yaml
docker-testbed/: Dockerfile  docker-compose.yaml  evaluate_downlink.sh  evaluate_latency.sh  evaluate_network.sh  evaluate_tcp_throughput.sh  evaluate_throughput.sh  evaluate_udp_throughput.sh  evaluate_uplink.sh  exec_order.txt  iperf3_output_reference.txt  sockperf_output_reference.txt
docker-testbed/custom/: Dockerfile  docker-compose.yaml  evaluate_latency.sh  evaluate_network.sh  evaluate_throughput.sh
traff-off-func/: Cargo.toml
traff-off-func-API/: expose iperf.yml  expose sockperf.yml  expose.yml  opencollection.yml  unexpose.yml
traff-off-func-common/src/: lib.rs
traff-off-func-ebpf/src/: helpers.rs  lib.rs  main.rs
traff-off-func/src/: lib.rs  main.rs  telemetry.rs
traff-off-func/src/api/: expose.rs  mod.rs  router.rs  server.rs  state.rs
traff-off-func/src/configuration/: config.rs  environment.rs
xdp-natd/: Cargo.toml  build.rs
xdp-natd-common/: Cargo.toml
xdp-natd-common/src/: lib.rs
xdp-natd-ebpf/: Cargo.toml
xdp-natd-ebpf/src/: helpers.rs  main.rs
xdp-natd/src/: lib.rs  main.rs  port_allocator.rs
xdp-natd/src/api/: expose.rs  router.rs  server.rs  state.rs
