[workspace]
resolver = "2"
members = [
    "traff-off-func",
    "traff-off-func-common",
    "traff-off-func-ebpf",
]
default-members = ["traff-off-func", "traff-off-func-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "8.0.0", default-features = false }
macaddr = "1.0"
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
uuid = {version = "1", features = ["v4", "fast-rng", "macro-diagnostics"]}
config = "0.15"

[profile.release.package.traff-off-func-ebpf]
debug = 2
codegen-units = 1
