[package]
name = "traff-off-func"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
traff-off-func-common = { path = "../traff-off-func-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
nix = { version = "0.31.2", features = ["net", "sched", "time"] }
docker-api = "0.14.0"
futures = "0.3"
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
macaddr.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
config.workspace = true
serde-aux = "4.7.0"
serde = "1.0.228"
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }
cargo_metadata = { workspace = true }
# TODO(https://github.com/rust-lang/cargo/issues/12375): this should be an artifact dependency, but
# it's not possible to tell cargo to use `-Z build-std` to build it. We cargo-in-cargo in the build
# script to build this, but we want to teach cargo about the dependency so that cache invalidation
# works properly.
#
# Note also that https://github.com/rust-lang/cargo/issues/10593 occurs when `target = ...` is added
# to an artifact dependency; it seems possible to work around that by setting `resolver = "1"` in
# Cargo.toml in the workspace root.
#
# Finally note that *any* usage of `artifact = ...` in *any* Cargo.toml in the workspace breaks
# workflows with stable cargo; stable cargo outright refuses to load manifests that use unstable
# features.
traff-off-func-ebpf = { path = "../traff-off-func-ebpf" }

[[bin]]
name = "traff-off-func"
path = "src/main.rs"
