[package]
name = "xdp-natd-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
xdp-natd-common = { path = "../xdp-natd-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-natd"
path = "src/main.rs"
